# eparc

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  grind_test.sh  guard.cmake  helpers.cmake  setup_lib.cmake  setup_test.cmake
main/: CMakeLists.txt  main.c
main/include/myc/: main.h
parser/: CMakeLists.txt  eval.c  grammar.c  grammar_print.c  grammar_types.c  node.c  node_print.c  par.c  parser.c  prule.c  tree.c
parser/include/myc/: eval.h  grammar.h  grammar_print.h  grammar_t.h  grammar_types.h  node.h  node_print.h  node_t.h  par.h  par_t.h  parser.h  prule.h  tree.h
parser/test_parser/: CMakeLists.txt  test_par.c  test_parse.c
plre/: CMakeLists.txt  plre.c
plre/include/myc/: plre.h
plre/test_plre/: CMakeLists.txt  test_plre.c
regex/: CMakeLists.txt  re_grp.c  re_mat.c  re_pat.c  re_util.c  regex.c
regex/include/myc/: re_grp.h  re_grp_t.h  re_mat.h  re_mat_t.h  re_pat.h  re_pat_t.h  re_util.h  regex.h  (+1 more)
regex/test_regex/: CMakeLists.txt  test_re_grp.c  test_re_mat.c  test_re_pat.c  test_re_util.c  test_regex.c
scanr/: CMakeLists.txt  scanr.c
scanr/test_scanr/: CMakeLists.txt  test_scanr.c  test_scanr_t.c
strbuf/: CMakeLists.txt  strbuf.c  strbuf_raw.c
strbuf/test_strbuf/: CMakeLists.txt  test_strbuf_raw.c  test_strbuf_t.c
test_helpers/: CMakeLists.txt
token/: CMakeLists.txt  token.c  toks.c  toks_raw.c
token/test_token/: CMakeLists.txt  test_token.c  test_toks.c  test_toks_raw.c
tokpat/: CMakeLists.txt  tokpat.c  tokpats.c  tokpats_raw.c
tokpat/test_tokpat/: CMakeLists.txt  test_tokpat.c  test_tokpats.c  test_tokpats_raw.c
(+16 files in other folders)
